# ccs-ai-josh

./: .gitignore  README.md  app.py  check_app.py  dvc.yaml  evaluation_summary.html  evaluation_summary.ipynb  feedback_mechanism.py  package-lock.json  package.json  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
SQL_entities/: dummy_entities.json
ccs_ai_josh/scripts/: basic_eval.py  basic_qa.py  basic_rag.py  data_ingestion.py  eval_viz.py  evaluate.py  extractCIDocsURLs.appscript  modify_index.py  multiturn_rag.py  visualize.py
ccs_ai_josh/src/: eval_utils.py  llm_utils.py  multiturn_utils.py  prompt_sanitiser.py
ccs_ai_josh/tests/: test_eval_utils.py  test_llm_utils.py  test_prompt_sanitiser.py
prompts/: correctness_score_prompt.txt  groundedness_score_prompt.txt  retrieval_score_prompt.txt
scripts/: basic_qa.py  basic_rag.py  data_ingestion.py  evaluate.py  multiturn_rag.py  visualize.py
src/: dummy_db.py  eval_utils.py  llm_utils.py  multiturn_utils.py  query_correction_engine.py  sanitise.py  text_to_sql.py
static/: style.css  web_functionality.js
static/govuk/: govuk-frontend.min.css
templates/: index.html
tests/: test_eval_utils.py  test_llm_utils.py  test_sanitise.py
