[project]
name = "ccs-ai-josh"
version = "0.1.0"
description = ""
authors = [
    {name = "SamuelHLewis",email = "sam.lewis1@crowncommercial.gov.uk"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "langchain[openai] (>=0.3.26,<0.4.0)",
    "python-dotenv (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
